# hdeem_cxx

./: CMakeLists.txt  HDEEM_CXX.cmake  README.md
cmake/: FindFreeIPMI.cmake  FindHDEEM.cmake
examples/: CMakeLists.txt  README.md  hdeem_avg.cpp  hdeem_raw.cpp  hdeem_timestats.cpp
include/: Doxyfile  hdeem_cxx.hpp
